--- a/po/da.po
+++ b/po/da.po
@@ -6,15 +6,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-26 05:38+0000\n"
-"PO-Revision-Date: 2018-02-02 00:45+0000\n"
+"POT-Creation-Date: 2019-05-29 22:08-0400\n"
+"PO-Revision-Date: 2019-05-18 22:20+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-04-27 05:41+0000\n"
-"X-Generator: Launchpad (build 18623)\n"
+"X-Launchpad-Export-Date: 2019-05-30 03:24+0000\n"
+"X-Generator: Launchpad (build 18968)\n"
 "Language: da\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -180,13 +180,13 @@ msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
-"Hvis den er sat til \"True\", så sendes en opstartsnotifikation. Det betyder "
+"Hvis den er sat til \"True\", så sendes en opstartsunderretning. Det betyder "
 "typisk at en optaget-markør vises mens programmet starter."
 
 #. Translators: "StartupNotify" on/off switch. When enabled, a busy cursor is shown while the application launches.
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Use startup notification"
-msgstr "Brug opstartsnotifikation"
+msgstr "Brug opstartsunderretning"
 
 #. Translators: Tooltip for the "NoDisplay" on/off switch.
 #: ../data/ui/MenulibreWindow.ui.h:58
@@ -585,7 +585,7 @@ msgstr "Udvikling"
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:53
 msgid "Education"
-msgstr "Uddannelse"
+msgstr "Læring"
 
 #. Translators: Launcher category description
 #: ../menulibre/MenulibreApplication.py:55
@@ -951,7 +951,7 @@ msgstr "Startgruppe er ugyldig - nuværende er '%s', skal være '%s'"
 
 #. Translators: This error is displayed when a required key is
 #. missing in a failing desktop file.
-#: ../menulibre/util.py:644 ../menulibre/util.py:674
+#: ../menulibre/util.py:644
 #, python-format
 msgid "%s key not found"
 msgstr "%s-nøgle ikke fundet"
