--- a/po/gl.po
+++ b/po/gl.po
@@ -984,7 +984,7 @@ msgstr ""
 #. Translators: This error is displayed for a failing desktop file where
 #. errors were detected but the file seems otherwise valid.
 #: ../menulibre/util.py:687
-msgid "Unknown error. Desktop file appears to be are valid."
+msgid "Unknown error. Desktop file appears to be valid."
 msgstr "Produciuse un erro descoñecido. O ficheiro Desktop parece válido."
 
 #~ msgid "<b>Options</b>"
