--- a/po/tr.po
+++ b/po/tr.po
@@ -983,7 +983,7 @@ msgstr ""
 #. Translators: This error is displayed for a failing desktop file where
 #. errors were detected but the file seems otherwise valid.
 #: ../menulibre/util.py:687
-msgid "Unknown error. Desktop file appears to be are valid."
+msgid "Unknown error. Desktop file appears to be valid."
 msgstr "Bilinmeyen hata. Masaüstü dosyası geçerli gibi görünüyor."
 
 #~ msgid "Image File"
